--- a/_config.yml
+++ b/_config.yml
@@ -76,10 +76,10 @@ plugins:
 # ---------------------------------------------------------------
 
 # Put your favicon.ico into `assets/` directory.
-favicon: /assets/favicon.ico
+favicon: /favicon.ico
 
 # Set default keywords (Use a comma to separate)
-keywords: "Jekyll, NexT"
+keywords: "随笔"
 
 # Set rss to false to disable feed link.
 # Leave rss as empty to use site's feed link.
